fix post images on mobile

--- a/scss/_post.scss
+++ b/scss/_post.scss
@@ -25,3 +25,7 @@
         width: 100%;
     }
 }
+
+.post-image {
+    width: 100%;
+}
